spec/fixtures/errors/when-with-no-condition.jsx
var React = require('react');

module.exports = React.createClass({
  render: function() {
    return (
      <div>
        <Choose>
          <When>WhenBlock</When>
        </Choose>
      </div>
    );
  }
});
